--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <title><%= full_title(yield(:title)) %></title>
@@ -7,10 +7,22 @@
                                'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application',
                                'data-turbolinks-track': 'reload' %>
-    <%= render 'layouts/shim' %> <!-- HTML shimがこの1行で済む -->
+    <!--[if lt IE 9]>
+      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
+      </script>
+    <![endif]-->
   </head>
   <body>
-    <%= render 'layouts/header' %> <!-- headerの内容がこの1行で収まる -->
+    <header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <%= link_to "勤怠管理システム", '#', id: "logo" %>
+        <nav>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "ホーム", '#' %></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
     <div class="container">
       <%= yield %>
     </div>
