--- a/app/mailers/edit.html.erb
+++ b/app/mailers/edit.html.erb
@@ -1,8 +1,6 @@
-<% provide(:title, 'アカウント編集') %>
-<% provide(:button_text, '更新する') %>
-<h1>アカウント情報の更新</h1>
-<div class="row">
-  <div class="col-md-6 col-md-offset-3">
-    <%= render 'form' %>
-  </div>
+<% provide(:title, "Top") %>
+<div class="center jumbotron">
+  <h1>勤怠管理システム</h1>
+  <p>このアプリケーションでは、登録されたユーザーの勤怠情報を閲覧・登録・編集することができます。</p>
+  <%= link_to "ユーザー登録", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
