--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -142,3 +142,13 @@ input, textarea, select, .uneditable-input {
   width: 30%;
   margin: auto;
 }
+
+.text-primary{
+  color: #F00;
+}
+
+
+.text-danger{
+  color: blue;
+}
+
