--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,17 @@
+
+<% if current_user.admin? %>
+
 <% provide(:title, '一覧') %>
 <h1>ユーザ一覧</h1>
 
 <%= will_paginate %>
+
 
 <ul class="users">
   <%= render @users %>
 </ul>
 
 <%= will_paginate %>
+
+
+  <% end %>
