--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,7 +21,9 @@
     </tr>
   </table>
 
+ 
   <%= link_to "勤怠を編集", edit_attendances_path(@user, @first_day), class: "btn btn-primary" %>
+
 
   <table class = "table-bordered table-striped table-condensed">
     <thead>
@@ -44,9 +46,18 @@
     </thead>
     <tbody>
       <% @dates.each do |day| %>
+      <% 
+    css_class = 
+    case %w{日 月 火 水 木 金 土}[day.worked_on.wday]
+    when '土'
+      'text-primary'
+    when '日'
+      'text-danger'
+    end
+  %>
         <tr>
           <td><%= day.worked_on.to_s(:date) %></td>
-          <td><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
+          <td class="<%= css_class %>"><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
           <td><%= day.started_at.to_s(:hour) if day.started_at.present? %></td>
           <td><%= day.started_at.to_s(:min) if day.started_at.present? %></td>
           <td>
