--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -152,3 +152,26 @@ input, textarea, select, .uneditable-input {
   color: blue;
 }
 
+.navbar-nav{
+
+margin: 7.5px -15px;
+} 
+
+.pull-right{ float: right !important;} 
+
+
+.container{margin-right: auto;
+margin-left: auto;
+padding-left: 15px;
+padding-right: 15px;
+} 
+
+
+.applicat{webkit-box-sizing: border-box;
+-moz-box-sizing: border-box;
+box-sizing: border-box;
+} 
+
+.readonly {
+  background-color: #EEEEEE;
+}
