--- a/app/views/attendances/edit.html.erb
+++ b/app/views/attendances/edit.html.erb
@@ -17,15 +17,20 @@
         <% @dates.each do |day| %>
           <%= fields_for "attendances[]", day do |af| %>
             <tr>
-              <td><%= day.worked_on.to_s(:date) %></td>
+               <td><%= day.worked_on.to_s(:date) %></td>
               <td><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
-              <td><%= af.time_field :started_at, class: "form-control" %></td>
-              <td><%= af.time_field :finished_at, class: "form-control" %></td>
-              <td>
+              <% if Date.current < day.worked_on %>
+              <td><%= af.time_field :started_at, readonly: true, class: "form-control" %></td>
+              <td><%= af.time_field :finished_at, readonly: true, class: "form-control" %></td>
+              
+             <% else %>
+             <td><%= af.time_field :started_at, class: "form-control" %></td>
+             <td><%= af.time_field :finished_at, class: "form-control" %></td>
+             <% end %>
                 <% if day.started_at.present? && day.finished_at.present? %>
                   <%= working_times(day.started_at, day.finished_at) %>
                 <% end %>
-              </td>
+              <td></td>
               <td><%= af.text_field :note, class: "form-control" %></td>
             </tr>
           <% end %>
