--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,8 +7,11 @@
         <% if logged_in? %>
          
          <% if current_user.admin? %>
-          <li><%= link_to "ユーザー一覧", users_path %></li>
+          <li><%= link_to "ユーザ一覧", users_path %></li>
            <% end %>
+           <% if current_user.admin? %>
+           <li><%= link_to "基本情報の修正", basic_info_path(current_user) %></li>
+            <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
              アカウント  <b class="caret"></b>
