--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,7 @@
 <% provide(:title, "ホーム") %>
 <div class="center jumbotron">
   <h1>勤怠管理システム</h1>
-  <%= link_to "アカウント作成", href="/signup", class: "btn btn-lg btn-primary" %>
+  <%= link_to "ログイン", login_path, class: "btn btn-lg btn-primary" %>
+  <p>アカウント作成は<%= link_to "こちら", href="/signup" %>から</p>
+  
 </div>
