--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,17 @@
 
 <% if current_user.admin? %>
-
+<div class="search-form">
 <% provide(:title, '一覧') %>
 <h1>ユーザ一覧</h1>
+<%= label_tag :name, "ユーザー名検索" %>
 
-<div class="container pull-right">
-<ul class="nav navbar-nav navbar-right"> 
 <%= form_tag(users_path, method: "get") do %>
-<%= label_tag :name, "ユーザー名検索" %><%= text_field_tag :name, params[:name] %>
-<%= submit_tag "検索", class: "btn btn-lg btn-primary" %>
+<div class="form-group">
+<%= submit_tag "検索", class: "btn btn-primary btn-search" %>
+<%= text_field_tag :name, params[:name], class: "form-control index_tag", placeholder: "キーワードを入力..." %>
 <% end %>
-</div>
+  </div>
+</form>
 <%= will_paginate %>
 
 
