--- a/app/views/attendances/edit.html.erb
+++ b/app/views/attendances/edit.html.erb
@@ -15,22 +15,31 @@
       </thead>
       <tbody>
         <% @dates.each do |day| %>
-          <%= fields_for "attendances[]", day do |af| %>
+   <%= fields_for "attendances[]", day do |af| %>
+            <%  css_class = 
+    case %w{日 月 火 水 木 金 土}[day.worked_on.wday]
+    when '土'
+      'text-primary'
+    when '日'
+      'text-danger'
+    end
+  %>
+       
             <tr>
                <td><%= day.worked_on.to_s(:date) %></td>
-              <td><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
+              <td class="<%= css_class %>"><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
               <% if Date.current < day.worked_on %>
               <td><%= af.time_field :started_at, readonly: true, class: "form-control" %></td>
               <td><%= af.time_field :finished_at, readonly: true, class: "form-control" %></td>
-              
              <% else %>
              <td><%= af.time_field :started_at, class: "form-control" %></td>
              <td><%= af.time_field :finished_at, class: "form-control" %></td>
              <% end %>
+             <td>
                 <% if day.started_at.present? && day.finished_at.present? %>
                   <%= working_times(day.started_at, day.finished_at) %>
                 <% end %>
-              <td></td>
+              </td>
               <td><%= af.text_field :note, class: "form-control" %></td>
             </tr>
           <% end %>
